[package]
name = "renewc"
version = "0.2.1"
edition = "2021"
description = "Certificate renewal, with advanced diagnostics without installing anything"
license = "Apache-2.0 OR MIT"

[dependencies]
instant-acme = { version = "0.2", git = "https://github.com/instant-labs/instant-acme", rev="c9a7b9d" }
x509-parser = "0.15"
x509-cert = "0.2" # only used for transforming pem to der encoded certs chains
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
clap = { version = "4", features = ["derive"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
rcgen = "0.10"
log = "0.4"
color-eyre = "0.6"
time = { version = "0.3", features = ["rand"] }
netstat2 = "0.9"
libproc = "0.13"
hyper = { version = "0.14", features = ["client"] }
itertools = "0.10"

haproxy-config = "0.4"
is-terminal = "0.4"
shared_memory = "0.12"
rand = "0.8"
# supports-color feature ends up enabling atty which has a RUSTSEC 
# advisory against it. For now colors will ben enabled always.
# owo-colors = { version = "3.5", features = ["supports-colors"] }
owo-colors = { version = "3.5" }
yasna = "0.5"
der = "0.7"
async-trait = "0.1"
data-encoding = "2.3"
pem = "2"

[dev-dependencies]
libc = "0.2"
proctitle = "0.1"
fork = "0.1"
rcgen = "0.10"
os_pipe = "1.1"
nix = { version = "0.26", features = ["fs"] }
tempfile = "3"
