[package]
name = "renewc"
version = "0.3.1"
authors = ["David Kleingeld <opensource@davidsk.dev>"]
edition = "2021"
rust-version = "1.70"
description = "Certificate renewal, with advanced diagnostics without installing anything"
license = "GNUv3"
readme = "README.md"
homepage = "https://github.com/dvdsk/renewc"
repository = "https://github.com/dvdsk/renewc"
keywords = ["cli", "certificate", "acme"]
categories = ["command-line-utilities"]

[dependencies]
instant-acme = { version = "^0.3.2" }
x509-parser = "0.15"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
clap = { version = "4", features = ["derive"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
rcgen = "0.11"
log = "0.4"
color-eyre = "0.6"
time = { version = "0.3", features = ["rand", "parsing"] }
netstat2 = "0.9"
libproc = "0.14"
hyper = { version = "0.14", features = ["client"] }
itertools = "0.11"

haproxy-config = "0.4"
rand = "0.8"
# supports-color feature ends up enabling atty which has a RUSTSEC 
# advisory against it. For now colors will ben enabled always.
# owo-colors = { version = "3.5", features = ["supports-colors"] }
owo-colors = { version = "3.5" }
yasna = "0.5"
async-trait = "0.1"
data-encoding = "2.4"
pem = "2"
strum = { version = "0.25", features = ["derive"] }
local-ip-address = "0.5.3"

[dev-dependencies]
libc = "0.2"
proctitle = "0.1"
fork = "0.1"
rcgen = "0.11"
os_pipe = "1.1"
nix = { version = "0.26", features = ["fs"] }
tempfile = "3"
shared_memory = "0.12"
