[package]
name = "renewc"
version = "0.4.0"
authors = ["David Kleingeld <opensource@davidsk.dev>"]
edition = "2021"
rust-version = "1.70"
description = "Certificate renewal, with advanced diagnostics without installing anything"
license = "GNUv3"
readme = "README.md"
homepage = "https://github.com/dvdsk/renewc"
repository = "https://github.com/dvdsk/renewc"
keywords = ["cli", "certificate", "acme"]
categories = ["command-line-utilities"]

[dependencies]
instant-acme = { version = "0.7" }
x509-parser = "0.15"
service-install = "0.4.5"

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
rcgen = "0.12"
log = "0.4"
color-eyre = "0.6"
time = { version = "0.3", features = ["rand", "parsing"] }
netstat2 = "0.11"
libproc = "0.14"
reqwest = { version = "0.12.9", default-features=false, features = [] }
itertools = "0.13"

haproxy-config = "0.4"
rand = "0.8"
owo-colors = { version = "4.1", features = ["supports-colors"] }
yasna = "0.5"
async-trait = "0.1"
data-encoding = "2.5"
pem = "3"
strum = { version = "0.25", features = ["derive"] }
local-ip-address = "0.6"

[features]
derchain = []

[dev-dependencies]
libc = "0.2"
proctitle = "0.1"
fork = "0.2"
rcgen = "0.12"
os_pipe = "1.1"
nix = { version = "0.29", features = ["fs"] }
tempfile = "3"
shared_memory = "0.12"
