[package]
name = "renewc-test-support"
version = "0.1.0"
edition = "2021"

[dependencies]
renewc = { path = "../main" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
color-eyre.workspace = true

time = { version = "0.3", features = ["rand", "parsing"] }
itertools = "0.13"

libc = "0.2"
proctitle = "0.1"
fork = "0.2"
rcgen.workspace = true
pem.workspace = true
os_pipe = "1.1"
nix = { version = "0.29", features = ["fs"] }
tempfile.workspace = true
shared_memory = "0.12"
