[package]
name = "renewc"
version = "0.5.0"
authors = ["David Kleingeld <opensource@davidsk.dev>"]
edition = "2021"
rust-version = "1.70"
description = "Certificate renewal, with advanced diagnostics without installing anything"
license = "GNUv3"
readme = "README.md"
homepage = "https://github.com/dvdsk/renewc"
repository = "https://github.com/dvdsk/renewc"
keywords = ["cli", "certificate", "acme"]
categories = ["command-line-utilities"]
default-run = "renewc"

[dependencies]
instant-acme = { version = "0.7" }
x509-parser = "0.15"
service-install = "0.5.2"

tracing.workspace = true
tracing-subscriber.workspace = true 
tracing-error.workspace = true

clap = { version = "4", features = ["derive"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio.workspace = true
log = "0.4"
color-eyre.workspace = true
time.workspace = true
netstat2 = "0.11"
libproc = "0.14"
reqwest = { version = "0.12.9", default-features=false, features = [] }
itertools = "0.13"

haproxy-config = "0.4"
rand = "0.8"
owo-colors = { version = "4.1", features = ["supports-colors"] }
yasna = "0.5" # DER encoding
data-encoding = "2.5"
pem.workspace = true
rcgen.workspace = true
strum = { version = "0.25", features = ["derive"] }
local-ip-address = "0.6"

[dev-dependencies]
renewc-test-support = { path = "../renewc-test-support" }
tempfile.workspace = true
